@@ -9,7 +9,7 @@ import java.util.NavigableSet;
 import java.util.Set;
 import java.util.TreeSet;
 
-import javax.time.calendar.ZonedDateTime;
+import org.threeten.bp.ZonedDateTime;
 
 import com.opengamma.OpenGammaRuntimeException;
 import com.opengamma.analytics.financial.instrument.cds.ISDACDSDefinition;
@@ -437,7 +437,7 @@ public class ISDAApproxCDSPricingMethod {
     if (hazardRateCurve != null) {
       final double[] hazardRateCurveTimePoints = hazardRateCurve.getTimePoints();
       for (int i = 0; i < hazardRateCurveTimePoints.length; ++i) {
-        allTimePoints.add(new Double(hazardRateCurveTimePoints[i]));
+        allTimePoints.add(Double.valueOf(hazardRateCurveTimePoints[i]));
       }
     } else {
       allTimePoints.add(new Double(cds.getMaturity()));
